--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 	<link rel="prefetch" href="images/zoom.png">
 
 	 <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="images/ico/supermanface.jpg">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/supermanface.jpg">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/supermanface.jpg">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/supermanface.jpg">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/supermanface.jpg">
-    <link rel="shortcut icon" href="img/supermanface.jpg">
+    <link rel="shortcut icon" href="images/pgicon.jpg">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/pgicon.jpg">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/pgicon.jpg">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="pgicon.jpg">
+    <link rel="apple-touch-icon-precomposed" href="images/pgicon.jpg">
+    <link rel="shortcut icon" href="img/pgicon.jpg">
 		
 </head>
 
