--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
                             <span class="font-semibold">JavaScript</span>
                         </div>
                     </div>
+
+                    <a class="btn btn-info" href="http://linkedin.com/in/coven" target ="_blank">Check Out My Resume!</a>
                 </div>
             </div><!--/.col-sm-6-->
         </div><!--/.row-->
@@ -461,9 +463,9 @@
 	
      <div class="col-12 col-sm-2  col-sm-offset-5">
 		<p><i class="icon icon-heart-empty"></i></a></p>
-			<span class="hover-text font-light "><p>Created by David Coven</p><p>Built with HTML5, CSS3, Bootstrap, JavaScript and lots of electrons!</p> <br> <a href="http://linkedin.com/in/coven" target ="_blank"> <a class="btn btn-info">Get Your Website Now!</a>
+			<p>Created by David Coven</p><p>Built with HTML5, CSS3, Bootstrap, JavaScript and lots of electrons!</p> <br> <a href="http://linkedin.com/in/coven" target ="_blank"> <a class="btn btn-info">Get Your Website Now!</a>
 			 
-			</span></a>
+			
 	</div>
 	</div>
 
