--- a/index.html
+++ b/index.html
@@ -28,9 +28,22 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/pgicon.jpg">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="pgicon.jpg">
     <link rel="apple-touch-icon-precomposed" href="images/pgicon.jpg">
-    <link rel="shortcut icon" href="img/pgicon.jpg">
-		
+    <link rel="shortcut icon" href="img/pgicon.jpg">		
 </head>
+<!--
+/*
+
+   ____       _    __     __           ____     ____   U  ___ u__     __ U _____ u _   _     
+ |  _"\  U  /"\  u\ \   /"/u  ___    |  _"\ U /"___|   \/"_ \/\ \   /"/u\| ___"|/| \ |"|    
+/| | | |  \/ _ \/  \ \ / //  |_"_|  /| | | |\| | u     | | | | \ \ / //  |  _|" <|  \| |>   
+U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ U| |\  |u   
+ |____/ u/_/   \_\U  \_/-(_/U/| |\u  |____/ u \____|\_)-\___/ U  \_/-(_/ |_____| |_| \_|    
+  |||_    \\    >>  //   .-,_|___|_,-.|||_   _// \\      \\     //       <<   >> ||   \\,-. 
+ (__)_)  (__)  (__)(__)   \_)-' '-(_/(__)_) (__)(__)    (__)   (__)     (__) (__)(_")  (_/   Name/Designer:     David Coven
+  
+      																						 URL:      http://www.covendavid.com
+*/
+-->
 
 <body>
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
