--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 				<div class="col-12 col-lg-3 col-sm-6">
 					<p><i class="icon icon-cloud"></i></p>
 					<h2 class="font-thin">Tomorrows <span class="font-semibold">Today</span></h2>
-					<h4 class="font-thin" style="text-align:left">I am a creative problem solver looking to create the next awesome things.<br>
-					They say reach for the stars, and land on the moon; well that's why I made my place in the clouds. Get ready for some big developments from <span class = "font-semibold">Engineering Expectations </span>!</h4>
+					<h4 class="font-thin" style="text-align:left">I am a creative problem solver looking to create the next awesome thing.<br>
+					They say reach for the stars, and land on the moon; well that's why I made my place in the clouds. Get ready for some big developments from <span class = "font-semibold">Engineering Expectations</span>!</h4>
 				</div><!-- /col12 -->
 				<div class="col-12 col-lg-3 col-sm-6">
 					<p style=><i class="icon icon-laptop"></i></p>
