--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 					 
 					 <p style="text-align:left">From the support and compassion I've been given from my mother, sisters, and close family Adam Burden, and Linda Sinni, I strive to impart on others the notion of holding compassion close to help change the communities we live in. Its time to stop wishing for the change we want to change, and time to start being the change. </p>
 
-					 <p style="text-align:left"> I am currently pursuing my Bachelors Degree in Mechanical Engineering and a minor in both Mathematics and Entrepreneurship  at the University of Washington, in Seattle Washington. I am primary interested in service, and community impact through educational access and support, and my passion helps me build bridges of support to help the communities around myself.</p>
+					 <p style="text-align:left"> I am currently pursuing my Bachelors Degree in Mechanical Engineering and a minor in both Mathematics and Entrepreneurship  at the University of Washington, in Seattle Washington. I am primairly interested in service, and community impact through educational access and support, and my passion helps me build bridges of support to help the communities around myself.</p>
             </div><!--/.col-sm-6-->
             <div class="col-sm-6">
                 <h2>My Skills</h2>
@@ -407,6 +407,10 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 						<div class="item">
 						  <h2>He always buy's me juice. I love juice.</h2>
 						  <h5>Mikael Hernandez - Mechanical Engineer | 16' University of Washington</h5>
+						</div>
+						<div class="item">
+						  <h2>Rolpop. I didn't know that was Poplar backwards until I met David. I think he saved my life.</h2>
+						  <h5>Kasey Acob- Mechanical Engineering | 16' University of Washington</h5>
 						</div>
 
 						<div class="item">
