--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 						  <h2>He always buy's me juice. I love juice.</h2>
 						  <h5>Mikael Hernandez - Mechanical Engineer | 16' University of Washington</h5>
 						</div>
+
 						<div class="item">
 						  <h2>Rolpop. I didn't know that was Poplar backwards until I met David. I think he saved my life.</h2>
 						  <h5>Kasey Acob- Mechanical Engineering | 16' University of Washington</h5>
@@ -419,6 +420,16 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 						</div>
 
 						<div class="item">
+						  <h2>If you've ever read a book it was probably inspired by David. He's just that cool.</h2>
+						  <h5>Robert Babs- English &amp; History | 16' University of Washington</h5>
+						</div>
+
+						<div class="item">
+						  <h2>I've never seen a dinosaur before, but if I did it was probably in David's Room.</h2>
+						  <h5>Diana Arriaza- Chemistry / Chemical Engineering | 16' University of Washington</h5>
+						</div>
+
+						<div class="item">
 						  <h2>He found out my secret... I really am from Narnia. #expectopatronum</h2>
 						  <h5>Stefhany Guadarrama - Mathematics | 16' University of Washington</h5>
 						</div>
@@ -427,6 +438,18 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 						  <h2>I'm pretty sure he's the best boyfriend ever. #KeepIt100</h2>
 						  <h5>Gennevi Lu - Architecture and Construction Management | 16' University of Washington</h5>
 						</div>
+
+						<div class="item">
+						  <h2>I learned to truly love the Hub's Fries after David gave me a few.</h2>
+						  <h5>Jennifer Jenks - Human Centered Design &amp; Engineering | 16' University of Washington</h5>
+						</div>
+
+						<div class="item">
+						  <h2>If I were going to make a game, David would be the main character, NO DOUBT!</h2>
+						  <h5>Courtney Johnson  - Computer Science &amp; Engineering | 16' University of Washington</h5>
+						</div>
+
+						
 					</div><!-- /carousel-inner -->
 				
 				</div><!--/carousel-end -->		
