--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">My Work</span></a></li>
 					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-heart"></span> <span class="text">The People</span></a></li>
 					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">Contact</span></a></li>
+					<li data-slide="6" class="col-12 col-sm-2 col-sm-offset-5"><a id="menu-link-6" href="pricing.html" title="Next Section"><span class="icon icon-usd"></span> <span class="text">Pricing</span></a></li>
 				</ul>
 				<div class="row">
 					<div class="col-sm-2 active-menu"></div>
@@ -493,8 +494,8 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 					<span class="hover-text font-light "> #ButFirst <br> #LetMeTakeASelfie</span></a>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="https://twitter.com/MrCovennnnn"><i class="icon icon-twitter"></i></a></p>
-					<span class="hover-text font-light ">FOLLOW NOW</span></a>
+					<p><a target="_blank" href="pricing.html"><i class="icon icon-usd"></i></a></p>
+					<footer>Get Your Website Now!</footer></a>
 				</div><!-- /col12 -->
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
@@ -503,8 +504,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 	
      <div class="col-12 col-sm-2  col-sm-offset-5">
 		<p><i class="icon icon-heart-empty"></i></a></p>
-			<p>Created by David Coven</p><p>Built with HTML5, CSS3, Bootstrap, JavaScript and lots of electrons!</p> <br> <a href="http://linkedin.com/in/coven" target ="_blank"> <a class="btn btn-info">Get Your Website Now!</a>
-			 
+			<p>Created by David Coven</p><p>Built with HTML5, CSS3, Bootstrap, JavaScript and lots of electrons!</p>
 			
 	</div>
 	</div>
