pricing header update

--- a/pricing.html
+++ b/pricing.html
@@ -59,12 +59,10 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 			
 			<div class="nav-collapse collapse navbar-responsive-collapse">
 				<ul class="nav row">
-					<li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#slide-1" title="Next Section"><span class="icon icon-home"></span> <span class="text">Home</span></a></li>
-					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="#slide-2" title="Next Section"><span class="icon icon-user"></span> <span class="text">The Future</span></a></li>
-					<li data-slide="8" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-8" title="Next Section"><span class="icon icon-briefcase"></span> <span class="text">About Me</span></a></li>
-					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">My Work</span></a></li>
-					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-heart"></span> <span class="text">The People</span></a></li>
-					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">Contact</span></a></li>
+					<li data-slide="1" class="col-12 col-sm-3"><a id="menu-link-1" href="#slide-1" title="Next Section"><span class="icon icon-home"></span> <span class="text">Home</span></a></li>
+					<li data-slide="2" class="col-12 col-sm-3"><a id="menu-link-2" href="#slide-2" title="Next Section"><span class="icon icon-usd"></span> <span class="text">Web Packages</span></a></li>
+					<li data-slide="5" class="col-12 col-sm-3"><a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-heart"></span> <span class="text">My Fans</span></a></li>
+					<li data-slide="6" class="col-12 col-sm-3"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">Contact &amp; Buy</span></a></li>
 				</ul>
 				<div class="row">
 					<div class="col-sm-2 active-menu"></div>
