--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 			</div><!-- /row -->
 			<div class="row subtitle-row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-10 font-light">You can find me literally anywhere, just push a button and there you are!</div>
+				<div class="col-12 col-sm-10 font-light">You can find me literally anywhere, just push a button and there you are! And if you're cool, you'll let me make you a website!</div>
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
 			<div id="contact-row-4" class="row">
