remove animation from progress bar

--- a/index.html
+++ b/index.html
@@ -167,43 +167,43 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
                 <h2>My Skills</h2>
                 <div>
 
-                    <div class="progress progress-striped active">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                             <span class="font-semibold">Mathematics</span>
                         </div>
                     </div>
-                    <div class="progress progress-striped active">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                             <span class="font-semibold">Mechanical Engineering</span>
                         </div>
                     </div>
                     </div>
-                    <div class="progress progress-striped ">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
                             <span class="font-semibold">Public Speaking</span>
                         </div>
                     </div>
-                    <div class="progress progress-striped ">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
                             <span class="font-semibold">Teaching</span>
                         </div>
                     </div>
-                    <div class="progress progress-striped ">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-default" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                             <span class="font-semibold">Higher Education</span>
                         </div>
                     </div>
-                    <div class="progress progress-striped ">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
                             <span class="font-semibold">HTML/CSS</span>
                         </div>
                     </div>
-                    <div class="progress progress-striped ">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                             <span class="font-semibold">BootStrap</span>
                         </div>
                     </div>
-                    <div class="progress progress-striped active">
+                    <div class="progress progress ">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                             <span class="font-semibold">JavaScript</span>
                         </div>
