--- a/index.html
+++ b/index.html
@@ -387,12 +387,12 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner">
 						<div class="item active">
-						  <h2>Sugar in milk would never be the same without David.</h2>
+						  <h2>If I were to slap a bitch, I'd tell David First. He's just that dude.</h2>
 						  <h5>Giovanni Iriarte-Young - Mechanical Engineer | 16' University of Washington</h5>
 						</div>
 						
 						<div class="item">
-						  <h2>He always buy's me juice. I love juice.</h2>
+						  <h2>If bacon were a child, I'd adopt him. Mmm. Bacon. I would make David the GodFather of Bacon.</h2>
 						  <h5>Mikael Hernandez - Mechanical Engineer | 16' University of Washington</h5>
 						</div>
 
@@ -404,6 +404,10 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 						<div class="item">
 						  <h2>falafel. falafel. falafel. David makes me good falafel's!</h2>
 						  <h5>Urmil Gajera- Business and Administration | 16' University of Washington</h5>
+						</div>
+						<div class="item">
+						  <h2>I killed a spider in David's room... Or so he thought.. Yeup. He's fucked.</h2>
+						  <h5>Malacki - Aerospace Engineering | 16' University of Washington</h5>
 						</div>
 
 						<div class="item">
