--- a/pricing.html
+++ b/pricing.html
@@ -116,7 +116,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 	<div class="slide story" id="slide-2" data-slide="2">
 		<div class="container">
 			<div class="row title-row">
-				<div class="col-12 font-thin">I'm not saying I'm, <span class="font-semibold">Batman</span>, I'm just saying, nobody has ever seen me and Batman in a room together...</div>
+				<div class="col-12 font-thin">I'm not saying I'm, <span class="font-semibold">Iron Man</span>, I'm just saying, nobody has ever seen me and Iron Man in a room together...</div>
 			</div><!-- /row -->
 			<div class="row line-row">
 				<div class="hr">&nbsp;</div>
@@ -183,7 +183,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 				<div class="col-12 col-lg-3 col-sm-6">
 					<p><i class="icon icon-globe"></i></p>
 					<h2 class="font-thin">
-						<span class="font-semibold">Batman</span> <br>
+						<span class="font-semibold">Iron Man</span> <br>
 						<span class="font-thin">$1499.99+</span>
 					</h2>
 					<h4 class="font-thin" style="text-align:left">
