--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 			<div class="row content-row">
 				<div class="col-12 col-lg-3 col-sm-6">
 					<p><i class="icon icon-cloud"></i></p>
-					<h2 class="font-thin">Tomorrows <span class="font-semibold">Today</span></h2>
+					<h2 class="font-thin">Tomorrow <span class="font-semibold">Today</span></h2>
 					<h4 class="font-thin" style="text-align:left">I am a creative problem solver looking to create the next awesome thing.<br>
 					They say reach for the stars, and land on the moon; well that's why I made my place in the clouds. Get ready for some big developments from <span class = "font-semibold">Engineering Expectations</span>!</h4>
 				</div><!-- /col12 -->
@@ -497,7 +497,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 					<span class="hover-text font-light "> #ButFirst <br> #LetMeTakeASelfie</span></a>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a target="_blank" href="pricing.html"><i class="icon icon-usd"></i></a></p>
+					<p><a target="_blank" href="mailto:covendavid94@gmail.com"><i class="icon icon-usd"></i></a></p>
 					<footer>Get Your Website Now!</footer></a>
 				</div><!-- /col12 -->
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
