--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">My Work</span></a></li>
 					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-heart"></span> <span class="text">The People</span></a></li>
 					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">Contact</span></a></li>
-					<li data-slide="6" class="col-12 col-sm-2 col-sm-offset-5"><a id="menu-link-6" href="pricing.html" title="Next Section"><span class="icon icon-usd"></span> <span class="text">Pricing</span></a></li>
+<!--					<li data-slide="6" class="col-12 col-sm-2 col-sm-offset-5"><a id="menu-link-6" href="pricing.html" title="Next Section"><span class="icon icon-usd"></span> <span class="text">Pricing</span></a></li>-->
 				</ul>
 				<div class="row">
 					<div class="col-sm-2 active-menu"></div>
