--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner">
 						<div class="item active">
-						  <h2>If I were to slap a bitch, I'd tell David First. He's just that dude.</h2>
+						  <h2> He's just that dude.</h2>
 						  <h5>Giovanni Iriarte-Young - Mechanical Engineer | 16' University of Washington</h5>
 						</div>
 						
