--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@ U| |_| |\ / ___ \  /\ V /_,-. | |   U| |_| |\| |/__.-,_| |_| | /\ V /_,-.| |___ 
 		<div class="container">
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
-					<h1 class="font-semibold">David <span class="font-thin">Coven</span></h1>
-					<h4 class="font-thin">I am <span class="font-semibold">an Engineer looking to change the world</span> from Seattle, WA.</h4>
+					<h1 class="font-semibold">David <span class="font-thin">David Coven</span>, Engineer</h1>
 					<br>
 					<br>
 				</div><!-- /col-12 -->
