--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<head>
 		<title>David Coven</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="David Coven" />
+		<meta name="keywords" content="David Coven" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
