--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>“Live as if you were to die tomorrow. Learn as if you were to live forever.”<h6>― <b>Mahatma Gandhi</b></h6></h2> 
+							<h2>“Live as if you were to die tomorrow. Learn as if you were to live forever.”― <b>Mahatma Gandhi</b></h2> 
                             
 						</header>
 						<p>I love to create things with amazing people. I love to spend time with family &amp; friends, and I work to change the world I live in. I've recently started blogging, so definitely check it out, I promise that its cool, and unbiased.
