--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 							<li><a href="http://www.medium.com/@coven" target="_blank" class="button">Medium Blog</a></li>
                             <li><a href="https://docs.google.com/document/d/1_qQk1wCJh6LXpdI1Sy9zNZ53ceUW-btJ1bmPd3R8-IQ/edit?usp=sharing" target="_blank" class="button">Media</a></li>
                             <li><a href="https://grabcad.com/david.coven-1" target="_blank" class="button">Projects</a></li>
+                            <li><a href="resume.html" target="_blank" class="button">Resume</a></li>
 						</ul>
 					</section>
 				
