--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                           <blockquote>“David hits so many of the criteria that we wish for in our UW students, all in one dynamic, optimistic and truly amazing person,” -- <a href="http://www.ee.washington.edu/people/faculty/riskin/" target="_blank"><b>Eve Riskin</b></a>, University of Washington, Engineering Associate Dean for Diversity and Access</blockquote>
                          <p>
                              <strong>Currently Reading</strong>: <em>Parables of the Sower</em> - Octavia Butler, <em>Learn Web Development with Rails</em> - Michael Hartl, <em>Data Structures and Algorithm Analysis in Java</em> - Mark Weiss<br>
-                             <strong>Currently Learning</strong>: MATLAB, Solidworks, Java, C++ <br>
-                             					<strong>Frameworks</strong>: Ruby on Rails, Famo.us, Angular, Ember
+                             <strong>Currently Learning</strong>: MATLAB, Solidworks, Java<br>
+                             					<strong>Frameworks</strong>: Ruby on Rails, Famo.us, Angular,
                         </p>
                         
                        
