--- a/resume.html
+++ b/resume.html
@@ -162,12 +162,15 @@
                 <b>Anticipated Graduation</b>:  June 2017
               </h6>
               <h6>
-              <strong>Proficient (6+ months)</strong>:&nbsp; HTML / CSS / Javascript, LaTeX, SolidWorks, Excel
-                                  <br>
-                                  <strong>Familiar </strong>:&nbsp; CATIA V5- AUTOCAD, MATLAB, Java, Python, Ruby / Ruby on Rails
+              <strong>Proficient (6+ months) <br></strong> HTML / CSS / Javascript, LaTeX, SolidWorks, Excel
+                                  <br> <br>
+                                  <strong>Familiar </strong> <br> CATIA V5- AUTOCAD, MATLAB, Java, Python, Ruby / Ruby on Rails
               </h6>
               <h6>
-                <b>Relevant Coursework</b>: Engineering Statics, Mechanics of Materials, Introduction to visualization &amp; CAD, Introduction to Scientific Computing, Elementary Differential Equations, Matrix Algebra, Linear Analysis, Fundamentals of Electrical Engineering
+                <b>Relevant Coursework</b> <br> Engineering Statics, Mechanics of Materials, Introduction to visualization &amp; CAD, Introduction to Scientific Computing, Elementary Differential Equations, Matrix Algebra, Linear Analysis, Fundamentals of Electrical Engineering 
+              </h6>
+              <h6>
+                <b>Planned Coursework</b> <br> Engineering Dynamics, Engineering Statistics, Multivariable Calculus, Physics - Waves &amp; Optics
               </h6>
             <hr>
 
