--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-                <h1><strong></strong>Engineer, Developer, Mathematician, Researcher. <br>
+                <h1><strong></strong>Engineer, Developer, Mathematician, Explorer. <br>
                     <a href="http://www.scholarshipjunkies.org" target="_blank"><strong>Scholarship Junkies</strong></a> | <a href="http://www.engx.co" target="_blank"><strong>Engineering Expectations</strong></a>
                 
                 </h1>
@@ -43,7 +43,6 @@
                            </p>
                           <blockquote>“David hits so many of the criteria that we wish for in our UW students, all in one dynamic, optimistic and truly amazing person,” ― <a href="http://www.ee.washington.edu/people/faculty/riskin/" target="_blank"><b>Eve Riskin</b></a>, University of Washington, Engineering Associate Dean for Diversity and Access</blockquote>
                          <p>
-                             <strong>Currently Reading</strong>: <em>Parables of the Sower</em> - Octavia Butler, <em>Learn Web Development with Rails</em> - Michael Hartl, <em>Data Structures and Algorithm Analysis in Java</em> - Mark Weiss, <em>To Do More Faster</em> - David Cohen<br>
                              <strong>Currently Learning</strong>: 
                              <br> School:  Kinematics &amp; Dynamics, Statistical Programming in R, Fundamentals of Material Science
                              <br> Personal: Python, EmberJS, Ruby on Rails, Famo.us, AutoCAD
@@ -70,14 +69,15 @@
 						<h2>Recent Work</h2>
 						<div class="row">
                              <article class="6u 12u$(3) work-item">
-								<a href="https://grabcad.com/david.coven-1" class="image fit thumb" target="_blank"><img src="images/projects/solidworks.png" alt="recommendr-pic" /></a>
+								<a href="https://grabcad.com/david.coven-1" class="image fit thumb" target="_blank"><img src="images/projects/ironcat.jpg" alt="recommendr-pic" /></a>
 								<h3>Solidworks</h3>
-								<p>Week by week modeling projects in varying complexity. From a metronome to a school bus. Currently working on an AudiR8, then hopefully a Tesla Model D </p>
+                                 <h6>Photo Credit: <a href="https://octodex.github.com/ironcat/" target="_blank">Github</a></h6>
+								<p>Week by week CAD modeling projects in varying complexity. From a metronome to a school bus. Currently working on an AudiR8, then hopefully a Tesla Model D. Right now they're all currently Solidworks models, but soon I'll be practicing with AutoCAD </p>
 							</article>
                             <article class="6u 12u$(3) work-item">
 								<a href="http://frontrow-mrcoven94.c9.io" class="image fit thumb" target="_blank"><img src="images/projects/front-row.png" alt="recommendr-pic" /></a>
 								<h3>Front Row</h3>
-								<p>I HATE loosing notes and ideas, so I decided to do something about it. Front Class is just like it sounds. The student in the front row always take the best notes. Front Row full scale Ruby on Rails, web app built for seamless note taking &amp; storage. <br> </p>
+								<p>I HATE loosing notes and ideas, so I decided to do something about it. Front Class is just like it sounds. The student in the front row always take the best notes. Front Row full scale Ruby on Rails, web app built for seamless note taking &amp; storage. <br><br><br> </p>
 							</article>
 							<article class="6u 12u$(3) work-item">
 								<a href="http://recommend-mrcoven94.c9.io" class="image fit thumb" target="_blank"><img src="images/projects/recommendr.png" alt="recommendr-pic" /></a>
@@ -90,12 +90,13 @@
 								<p>The non-profit I'm running is in need of a makeover. I'm working on the UX, and the custom Ruby on Rails system architecture. I have the fun pleasure of thinking about scalability, and the logic to make the beast work.</p>
 							</article>
 							<article class="6u 12u$(3) work-item">
-								<a href="https://github.com/HackerCollective/resources" class="image fit thumb" target="_blank"><img src="images/projects/hacker-collective.png" alt="hc-pic" /></a>
+								<a href="https://github.com/HackerCollective/resources" class="image fit thumb" target="_blank"><img src="images/projects/hacker-collective.jpg" alt="hc-pic" /></a>
 								<h3>Hacker Collective</h3>
+                                <h6>Photo Credit: <a href="https://octodex.github.com/baracktocat/" target="_blank">Github</a></h6>
 								<p>GitHub repo with 100+ stars built to provide better guides and walk-throughs for learning almost anything. From scholarship information &amp; business, to the nitty gritty details of web development &amp; object oriented programming.</p>
 							</article>
 							<article class="6u$ 12u$(3) work-item">
-								<a href="http://davidcoven.me/math/e/" class="image fit thumb" target="_blank"><img src="images/projects/basedmath.png" alt="open-doors-pic" /></a>
+								<a href="http://davidcoven.me/math" class="image fit thumb" target="_blank"><img src="images/projects/basedmath.png" alt="open-doors-pic" /></a>
 								<h3>Based Mathematician</h3>
 								<p>I love teaching. I've taught algebra I, algebra II, differentiation and integral calculus, and differential equations.</p>
 							</article>
@@ -112,7 +113,7 @@
 								<p>Open doors is a multi-purpose platform to help students get into their majors, internships, research, and more involved on campus. </p>
 							</article>
                             <article class="6u 12u$(3) work-item">
-								<a href="http://recommend-mrcoven94.c9.io" class="image fit thumb" target="_blank"><img src="images/research/cell-biomechanics.png" alt="Cell Research -pic" /></a>
+								<a href="documents/research/cell-bioMechanics.pdf" class="image fit thumb" target="_blank"><img src="images/research/cell-biomechanics.png" alt="Cell Research -pic" /></a>
 								<h3>Cell BioMechanics Research Assistant</h3>
                                 <p>For 4 weeks I investigated and built nano and micro pillars for use in measuring the force exerted by human endothelial cells around the heart. Check out my <a href="documents/research/cell-bioMechanics.pdf" target ="_blank">poster</a> &amp; <a href="documents/research/Abstract.pdf" target ="_blank">abstract</a>! </p>
 							</article>
