add html5up credit

--- a/index.html
+++ b/index.html
@@ -502,7 +502,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     <li><a href="http://instagram.com/mrcoven" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; David Coven </li><li>Always a work in progress.</li>
+					<li>&copy; David Coven </li>
+                    <li>Always a work in progress.</li>
+                    <li>Design by <a href="html5up.net" target="_blank">HTML5UP</a></li>
 				</ul>
 			</footer>
 
