--- a/media.html
+++ b/media.html
@@ -152,7 +152,8 @@
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
             <a href="http://twitter.com/mrcovennnnn" target="_blank"><i class="ion-social-twitter"></i></a>
-            <a href="resume" target="_blank"><i class="ion-document"></i></a>
+            <a href="mailto:coven@uw.edu" target="_blank"><i class="ion-email"></i></a>
+            <a href="http://twitter.com/mrcovennnnn" target="_blank"><i class="ion-social-linkedin-outline"></i></a>
             <a href="http://instagram.com/mrcoven" target="_blank"><i class="ion-social-instagram"></i></a>
             <a href="http://facebook.com/themrcoven" target="_blank"><i class="ion-social-facebook"></i></a>
             <a href="media.html" target="_blank"><i class="ion-videocamera"></i></a>
