--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="assets/img/favicon.ico">
+    <meta name="description" content="Loving life in Seattle, I'm a mechanical engineer, technical designer and problem solver. I love creating solutions to impact the world">
+	<meta name="author" content="David Coven">
+    <link rel="icon" href="assets/img/haha.JPG">
 
     <title>David Coven</title>
 
@@ -206,7 +206,7 @@
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
             <a href="http://twitter.com/mrcovennnnn" target="_blank"><i class="ion-social-twitter"></i></a>
-              <a href="http://twitter.com/mrcovennnnn" target="_blank"><i class="ion-social-linkedin-outline"></i></a>
+              <a href="http://linkedin.com/in/coven" target="_blank"><i class="ion-social-linkedin-outline"></i></a>
             <a href="mailto:coven@uw.edu" target="_blank"><i class="ion-email"></i></a>
             <a href="http://instagram.com/mrcoven" target="_blank"><i class="ion-social-instagram"></i></a>
             <a href="http://facebook.com/themrcoven" target="_blank"><i class="ion-social-facebook"></i></a>
