--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Loving life in Seattle, I'm a mechanical engineer, technical designer and problem solver. I love creating solutions to impact the world">
 	<meta name="author" content="David Coven">
+    <meta property="og:image" content="https://www.facebook.com/photo.php?fbid=10202289154296672&set=a.1579161685373.2077074.1425577703&type=3&theater" />
+    <meta property="og:image:width" content="2048" />
+    <meta property="og:image:height" content="1370" />
+    <meta property="og:site_name" content="David Coven"/>
+    <meta property="og:url"
+content="http://coven.engineer" />
     <link rel="icon" href="assets/img/haha.JPG">
 
     <title>David Coven</title>
@@ -16,6 +22,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/ionicons.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="image_src" href="assets/img/david.jpg"  >
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
