--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ content="http://coven.engineer" />
 
     <div id="h">
       <div class="logo">
-        <h2>Husle Hard, Stay Humble</h2>
+        <h2>Hustle Hard, Stay Humble</h2>
       </div><!--/logo-->
       <div class="container centered">
         <div class="row">
