--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ content="http://coven.engineer" />
          <p>I am currently a senior at the University of Washington, pursuing a BS in Mechanical Engineering. My degree has given me a strong set of skills in analysis, mechanical design, and problem solving but my true love is to make things better for people. Outside of building the airplanes you fly on, and the best car in the world (electric too!) I run <a href="http://scholarshipjunkies.org" target="_blank">Scholarship Junkies</a>, non-profit dedicated to helping students across the nation in their quest for scholarship success.  </p>
         </div><!--/col-md-6-->
         <div class="col-md-6">
-          <p> We are working to provide free and word-class support for anyone striving to access higher education. I am also a Director, Aerodtnamics team lead, and member of the Systems engineering group for the University of Washington's <a href="http://uwashingtonhyperloop.org" target="_blank">Hyperloop</a> team. We gearing up to compete and win <a>SpaceX</a>'s university competition over the next year.  The harder the problem the better for me. </p>
+          <p> We are working to provide free and word-class support for anyone striving to access higher education. I am also a Director, Aerodynamics &amp; Systems Engineering team lead for the University of Washington's <a href="http://uwashingtonhyperloop.org" target="_blank">Hyperloop</a> team. We gearing up to compete and win <a>SpaceX</a>'s university competition over the next year.  The harder the problem the better for me. </p>
         </div><!--/col-md-6-->
       </div><!--/row-->
     </div><!-- /.container -->
