--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ content="http://coven.engineer" />
       <div class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
-            <h1>I live in the amazing Seattle</h1>
+            <h1>I live in the amazing city of Seattle</h1>
             <h3 class="mb">Loving life in a booming tech industry.</h3>
             <button class="btn btn-conf btn-clear">Send me a note</button>
           </div>
